<resources>
    <string name="api_key">AIzaSyB0RLmsquEqkDAudZWpkkAtcmVK0E8Xdww</string>

    <string name="app_name">ISS-Tracker</string>
    <string name="bottom_sheet_title">ISS Data</string>
    <string name="home_nav_drawer">Home</string>
    <string name="map_nav_drawer">Map</string>
    <string name="stream_nav_drawer">ISS Live Stream</string>
    <string name="about_nav_drawer">About</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="iss_live_stream_info">Info</string>
    <string name="cardboard">Cardboard View</string>
    <string name="alexander_chamberlain">Alexander Chamberlain</string>
    <string name="lukas_koller">Lukas Koller</string>
    <string name="authors">Authors</string>
    <string name="libraries">Libraries</string>
    <string name="about">About</string>
    <string name="glide">Glide</string>
    <string name="google_play_servcie_attribution">Google Play Servcie Attribution</string>
    <string name="retrofit">Retrofit</string>
    <string name="libgdx">Libgdx</string>
    <string name="libgdx_cardBoard_extension">Libgdx-CardBoard-Extension</string>
    <string name="open_iss_data_drawer">Open Iss Data Drawer</string>
</resources>
